--- a/index.html
+++ b/index.html
@@ -13,13 +13,15 @@
   <main>
     <div id="wrapper">
       <div id="quote">
-s      </div>
+      </div>
       <div id="btn">
-        <button>Generate Random Quote</button>
+        <button onclick="getQuote()">New Quote</button>
+
 
       </div>
     </div>
   </main>
+  <script src="generate.js"></script>
 </body>
 
 </html>
