--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <div id="quote">
       </div>
       <div id="btn">
-        <button onclick="getJSON()">New Quote</button>
+        <button onclick="getQuote()">New Quote</button>
 
 
       </div>
